# RLYX

./: .env.example  .gitignore  README.md  arguments.py  evaluation.py  infer_workers.py  pyproject.toml  requirements.txt  rewards.py  run_eval.sh  run_eval_multi.sh  train.py  utils.py
configs/deepspeed/: ds_z3_config.json  ds_z3_offload_config.json
example_datasets/: README.md
example_datasets/csv/: test.csv  train.csv
example_datasets/json/: example.json
example_datasets/jsonl/: test.jsonl  train.jsonl
example_datasets/text/: test.txt  train.txt
exps/exp-gsm8k-qwen-2.5-0.5b-base-example/: exp_config.yaml  prep_01_start_ray_on_master.sh  prep_02_start_serve_on_master.sh  run_train.sh  serve_config.yaml
exps/exp-gsm8k-qwen-2.5-0.5b-instruct-example/: exp_config.yaml  serve_config.yaml
exps/exp-qwen0.5b-r1-zero-example/: exp_config.yaml  run_train.sh
rlyx/: __init__.py  evaluation.py  registries.py
rlyx/arguments/: __init__.py  agent_arguments.py  base_arguments.py
rlyx/chat_templates/: __init__.py  default_chat_template.py  no_chatml_special_token_chat_template.py  simple_chat_template.py
rlyx/dataset_loaders/: __init__.py  csv_loader.py  huggingface_loader.py  json_loader.py  jsonl_loader.py  text_file_loader.py
rlyx/evaluators/: __init__.py  basic_evaluator.py  detailed_evaluator.py  gsm8k_basic_evaluator.py  simple_evaluator.py
rlyx/infer_workers/: default_vllm_worker.py  whisper_worker.py
rlyx/rewards/: README.md  __init__.py  default_format_reward.py  exact_match_reward.py  math_reward.py  number_reward.py  transcribe_reward.py  utils.py
(+11 files in other folders)
