[project]
name = "simple-r1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.3.0",
    "datasets==3.2.0",
    "deepspeed==0.16.3",
    "math-verify==0.4.1",
    "pudb==2024.1.3",
    "python-dotenv==1.0.1",
    "ray==2.41.0",
    "tensorboard>=2.19.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "transformers==4.48.2",
    "vllm==0.7.0",
    "wandb==0.19.6",
]
