[project]
name = "rlyx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate==1.3.0",
    "datasets==3.2.0",
    "deepspeed==0.16.3",
    "ipython>=9.3.0",
    "librosa>=0.11.0",
    "liger-kernel>=0.5.10",
    "math-verify==0.4.1",
    "openai-whisper>=20240930",
    "pudb==2024.1.3",
    "python-dotenv==1.0.1",
    "ray==2.48.0",
    "soundfile>=0.13.1",
    "tensorboard>=2.19.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "transformers==4.48.2",
    "vllm==0.7.0",
    "wandb==0.19.6",
]

[dependency-groups]
dev = [
    "datasets>=3.2.0",
    "langchain>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-community>=0.3.13",
    "langchain-openai>=0.3.22",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "bm25s>=0.2.0",
    "kiwipiepy>=0.18.0",
]
